# Nvidia_Jetson_AI_Tutor

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
content/starter_pack/: basic_math.md  basic_science.md  reading_comprehension.md
docs/: ARCHITECTURE.md  CONTENT_PACKS.md  HARDWARE_SETUP.md  MODELS.md
edgetutor/: __init__.py  __main__.py
edgetutor/app/: __init__.py  orchestrator.py  ui.py
edgetutor/audio/: __init__.py  stt.py  tts.py
edgetutor/core/: __init__.py  conversations.py  jetson.py  llm.py  logging_config.py  mentor.py  prompts.py  rag.py  safety.py  settings.py
edgetutor/tests/: __init__.py  conftest.py  test_conversations.py  test_jetson.py  test_llm.py  test_logging.py  test_main.py  test_mentor.py  test_ocr.py  test_orchestrator.py  test_orchestrator_integration.py  test_prompts.py  test_rag.py  test_safety.py  test_settings.py  test_settings_validation.py  test_stt.py  test_tts.py
edgetutor/vision/: __init__.py  ocr.py
scripts/: download_model.sh  download_voice.sh  ingest_content.sh  run.sh  setup_jetson.sh
